// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Account /> should render properly 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<h2
    className="emotion-0"
  >
    Account Overview
  </h2>,
  .emotion-0 {
  padding-top: 16px;
  padding-bottom: 16px;
}

<div
    className="emotion-0"
  >
    Number of Projects: 
    2
  </div>,
  .emotion-0 {
  display: grid;
  gap: 32px;
}

@media screen and (min-width: 800px) {
  .emotion-0 {
    grid-template-columns: 1fr 1fr;
  }
}

@media screen and (min-width: 1200px) {
  .emotion-0 {
    grid-template-columns: 1fr 1fr 1fr;
  }
}

@media screen and (min-width: 1600px) {
  .emotion-0 {
    grid-template-columns: 1fr 1fr 1fr 1fr;
  }
}

@media screen and (min-width: 2000px) {
  .emotion-0 {
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
  }
}

<div
    className="emotion-0"
  >
    <AccountCard
      name="qwerty"
      projectId="76917058-b147-4556-987a-0a0f11e46d9b"
    />
    <AccountCard
      name="azerty"
      projectId="e93cbadb-e5ae-4598-8395-4cf5b30c0e94"
    />
  </div>,
]
`;

exports[`<Account /> should render properly with no projects 1`] = `
Array [
  .emotion-0 {
  font-size: 18px;
  line-height: 21px;
  font-weight: 400;
  padding-top: 24px;
  padding-bottom: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

<h2
    className="emotion-0"
  >
    Account Overview
  </h2>,
  .emotion-0 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-1 {
  color: #808080;
  font-weight: 400;
}

<div
    className="emotion-0"
  >
    <svg
      data-file-name="noProject.svg"
      width={250}
    />
    <h3
      className="emotion-1"
    >
      You currently have no projects
    </h3>
  </div>,
]
`;
